# stoichkit

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: bin.rs  lib.rs  main.rs  model.rs  molecule.rs  parse.rs  solve.rs  test_utils.rs
src/cli/: mod.rs
src/ext/: cdrxn.rs  chemdraw.rs  mod.rs
src/model/: balanced_reaction.rs  compound.rs  element.rs  mod.rs  reactant.rs  reaction.rs  reaction_list.rs  sample.rs  theoretical_reaction.rs  units.rs  yield_reaction.rs
src/parse/: mod.rs  v1.rs  v2.rs
test/: cli_test.sh
