[package]
name = "stoichkit"
version = "0.1.0"
authors = ["tmck"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-beta.1", features = ["derive"] }
ptable = "0.3.2"
log = "*"
env_logger = "*"


[dev-dependencies]
libmath = "*"
