[package]
name = "stoichkit"
description = "A stoichiometry toolkit"
version = "0.6.0"
authors = ["Tyler M. Kontra"]
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/ttymck/stoichkit"
categories = ["science", "command-line-utilities"]
keywords = ["chemistry", "stoichiometry", "science"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "stoichkit"
path = "src/lib.rs"

[[bin]]
name = "stoichkit"
path = "src/bin.rs"

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }

nalgebra = "0.21.1"

rug = { version = "1.9.0", features = ['integer', 'rational' ] }
periodic-table-on-an-enum = "0.3.2"
num = "0.3.0"
itertools = "0.9.0"

serde_json = "1.0"
serde = { version = "1.0", features = ['derive'] }

nom = "7.0.0"

log = "0.4.11"
env_logger = "0.7.1"

[dev-dependencies]
libmath = "0.2.1"
